docs: preserve branch operating detail; fix review-coverage by commit
Addresses the suppressed Copilot comment on Get-PrReadiness.ps1:251 and closes
the content-loss gaps found by auditing the skill against the files it is
meant to replace.

Review coverage:
  automatedReviewCoversHead was computed from the newest automated review
  overall, so a force-push back to an already-reviewed commit reported a
  reviewed head as uncovered and would send -WaitForReview into a pointless
  wait. Coverage is now true when *any* automated review targets the head, and
  the reported review prefers one that covers the head, falling back to the
  newest for diagnostics.

Knowledge preservation:
  AGENTS_spark4.0.md and AGENTS_spark4.1.md exist only on the two sync
  branches; neither live spark4.0 nor live spark4.1 carries any branch
  documentation. Deleting them therefore destroys that knowledge unless this
  skill carries it, so the condensation was re-audited line by line against
  both sources. Recovered here:

  - generated Python lives under target/scala-2.13, not master's scala-2.12
  - the Java 17 surface: Dockerfile JAVA_HOME, pr-validation.yml JDK, and the
    exact CMS flags whose restoration stops the JVM booting
  - why environment.yml pins move (pip too old, first torch/torchvision
    releases, interpreter-specific wheel URLs) and why their comments matter
  - the Spark 4 adaptations by name: UnboundRowEncoder and the SAR case class,
    DetectAmbiguousSelfJoin and the qualified join column, safeGetDefault, and
    why the classifier fixture dropped NaN rather than weakening the assertion
  - OpenAIPromptPythonOverrides.scala and the NameError that zero-arg super()
    avoids
  - the __init__.py rationale and its guard tests (test_http_package.py,
    test_package_exports.py)
  - rLoadLine/new_ml_pipeline_stage: signature stable v1.8.0-v1.9.5, four
    param types share one implementation, keep the three assertions in step,
    and it is alignment rather than a prov