@@ -11,14 +11,32 @@ against the live target branch.
   work on `master`, then merge it into the port branch.
 - Resolve conflicts per hunk and compare content with the merge base and
   `master`; blanket `ours`/`theirs` and reachability are insufficient.
-- Diff `spark4.0` and `spark4.1` before debugging or merging. Shared fixes often
-  already exist on the sibling branch, but version-specific changes must not be
-  copied blindly.
+- Diff `spark4.0` and `spark4.1` before debugging or merging
+  (`git diff spark4.0 spark4.1 -- <path>`). `spark4.1` descends from `spark4.0`'s
+  upgrade commit and is maintained more actively, so it has usually already hit
+  and solved the same problem — it has directly supplied the fixes for R parsing,
+  the R Spark connection, nested-stage loading in R, the generated-wrapper
+  `super()` bug, the stale `__init__.py` shims, the local setup skill, the
+  notebook runtime, and a failing training test. This is the single
+  highest-value habit on these branches. Two cautions when porting: substitute
+  the target branch's version strings, and confirm the fix is not specific to
+  the source branch's Spark/Python version.
 
 ## Common deliberate differences from master
 
-- Spark 4 uses Scala 2.13 and Java 17-era tooling. Preserve branch-specific
-  dependency comments, Java configuration, and removal of obsolete CMS flags.
+- Spark 4 uses Scala 2.13 and Java 17-era tooling, so generated Python lands in
+  `target/scala-2.13/generated/src/python/` rather than master's `scala-2.12`
+  path. `tools/docker/*/Dockerfile` set `JAVA_HOME` to Java 17 and
+  `.github/workflows/pr-validation.yml` uses JDK 17. `pipeline.yaml` drops
+  master's `-XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled` from
+  `SBT_OPTS`: CMS was removed in Java 17 and the JVM refuses to start with those
+  flags, so a sync that restores them fails before any test runs.
+- `environment.yml` moves pins forward for the branch's Python, and each pin
+  carries a comment saying why. Those comments are the mechanism that stops a
+  later sync from "restoring" master's value, so preserve them through conflict
+  resolution. The recurring reasons: master's `pip` is too old to install for
+  these interpreters, `torch`/`torchvision` need their first releases supporting
+  the version, and `pandas`/`horovod` come from interpreter-specific wheel URLs.
 - The `pyarrow` and `mlflow` pins are coupled, and the pinned versions are not
   the same on every branch — read both live values on the branch you are editing
   before changing either. The bound comes from MLflow: `mlflow==2.21.3` declares
@@ -29,13 +47,29 @@ against the live target branch.
   with each other and with the pins they sit next to.
 - Scala 2.13 collection boundaries must produce immutable `Seq` values; keep
   the central `asImmutableCollection` conversion rather than per-service fixes.
-- Preserve Spark 4 adaptations for SAR encoders/self-joins,
-  `Wrappable.safeGetDefault`, and the non-NaN classifier fixture.
-- `OpenAIPrompt` is an internal generated wrapper. Generated overrides use
-  zero-argument `super()` because the public class name is not in that module.
-- `PythonInitMerger` makes hand-written `__init__.py` files live package code.
-  Keep the HTTP initializer empty, remove duplicate generated exports, and do
-  not narrow `__all__` with hand-maintained class lists.
+- Preserve the Spark 4 adaptations. In `SAR.scala`/`SARModel.scala` the affinity
+  pairs use a named `case class` with explicit struct fields because Spark 4
+  rejects the old `Seq[Row]` UDF shape with `UnboundRowEncoder`, and the join
+  column is qualified (`col("sarUserFactors.flatList")`) because a self-join now
+  trips `DetectAmbiguousSelfJoin`. `Wrappable.safeGetDefault` guards
+  `getDefault`, which throws on Spark 4 where Spark 3 returned a default.
+  `VerifyTrainClassifier`'s vector fixture no longer feeds `Double.NaN` to the
+  trainer: that test is about training on a vector column, not about NaN, so the
+  value was replaced rather than the assertion weakened.
+- `OpenAIPrompt` sets `pyInternalWrapper = true`, so codegen emits
+  `class _OpenAIPrompt` and a hand-written `OpenAIPrompt.py` supplies the public
+  name. Python emitted into that class must use zero-argument `super()`; a
+  hardcoded `super(OpenAIPrompt, self)` raises `NameError` because that name does
+  not exist inside the generated module. See `OpenAIPromptPythonOverrides.scala`.
+- `PythonInitMerger` makes hand-written `__init__.py` files live package code by
+  splicing them *after* the generated imports; before it, codegen overwrote them
+  and their contents were inert, so a stale one is now a real bug. Keep the HTTP
+  initializer empty — it listed `HTTPFunctions` and `ServingFunctions`, which are
+  modules of free functions with no same-named class, and the failed import broke
+  `PythonTests core` plus seven website samples. Remove initializers that only
+  duplicate generated exports, and do not narrow `import *` by redefining
+  `__all__` as a hand-maintained list. Keep the ones that add exports codegen
+  does not emit. `test_http_package.py` and `test_package_exports.py` guard this.
 - `cyber/utils/spark_utils.py` differs between the branches without either form
   being version-specific: `spark4.0` builds its indexed frame with
   `rdd.toDF(schema)` and `spark4.1` uses `spark.createDataFrame(rdd, schema)`.
@@ -62,13 +96,34 @@ against the live target branch.
   does not yet. Check for it before relying on it, run it before spending a
   pipeline run on an R failure, and keep its assertions in step when changing
   generated R.
+- Nested stages load off the JVM: `PipelineStageWrappable.rLoadLine` emits
+  `sparklyr:::new_ml_pipeline_stage(invoke(spark_jobj(x), "getStages")[[1]])`
+  rather than `ml_stages(x)[[1]]`. `new_ml_pipeline_stage` is sparklyr-internal
+  but has an identical signature in every release from v1.8.0 to v1.9.5.
+  `EstimatorParam`, `ModelParam`, `PipelineStageParam` and `TransformerParam` all
+  inherit this single implementation — do not reintroduce per-class overrides,
+  and keep the three `rLoadLine` assertions in
+  `VerifyModelParam`/`VerifyPipelineStageParams` in step with it. Be accurate
+  about its status: on a branch whose R tests died earlier on `ml_load`, this
+  line was never reached, so it is alignment with the working branch rather than
+  a proven fix.
 
 ## Runtime and CI
 
-- Spark 4 Databricks builds share scarce GPU capacity. Queue them sequentially
-  and use sibling-branch timing/results as a control before blaming capacity.
-- `areLibrariesInstalled == false` can mean install timeout rather than a
-  failed library. Read statuses and notebook duration before classifying it.
+- Spark 4 Databricks builds share scarce GPU capacity: the GPU pool
+  `synapseml-build-14.3-gpu` is shared with `master` and both Spark 4 branches
+  (instance pools are runtime-agnostic, so sharing avoids duplicating scarce GPU
+  quota). It holds three workers (`GpuWorkersPerRun` 1 x `GpuConcurrentRuns` 3),
+  so two concurrent builds can exhaust it. Queue them sequentially, and use the
+  sibling branch as a free control: because the pool is shared, an outcome that
+  tracks the branch rather than the timing is a code difference, not contention.
+- `areLibrariesInstalled == false` is a timeout, not a capacity verdict, and the
+  logic inverts the way people expect. The check *throws* `Library Installation
+  Failure` with the offending statuses if any library reports `FAILED`, so
+  returning `false` means the opposite: nothing failed, the libraries simply had
+  not all reached `INSTALLED` before the retry budget ran out (`60 * 10` attempts
+  at 1s, about 10 minutes). A slow install reads exactly like a starved pool.
+  Read statuses and notebook duration before classifying it.
 - `DatabricksCPUStreamingTests` exists only on the Spark 4 branches, and whether
   it is scheduled varies by branch — read `pipeline.yaml` on the branch you are
   working on rather than assuming. It is a separate class because the streaming
